Corrected nav height for landscape display on mobile devices, adjusted .bio bottom margin for desktop display

--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@
   
     .bio {
     padding-left: 30%;
+    margin-bottom: 75px;
     font-size: 26px;
     text-indent: 25px;
     letter-spacing: 1px;
@@ -159,5 +160,11 @@
       float: left;
       border-top: none;
       border-right: solid 2px #FFFFFF;
+    }
+  }
+  
+  @media only screen and (max-width: 850px) and (max-height: 600px){
+    nav {
+      height: 60px;
     }
   }
